tests/parsing/smtlib/v2.7/errors/119_prop_lit_list_bad_1.smt2
(set-logic ALL)
(check-sat-assuming (p _))
