tests/parsing/smtlib/v2.7/errors/119_prop_lit_list_bad_1.expected
File "tests/parsing/smtlib/v2.7/errors/119_prop_lit_list_bad_1.smt2", line 2, character 23-24:
2 | (check-sat-assuming (p _))
                           ^
Error while parsing a list of terms, read the reserved word '_',
      but expected a term or a closing parenthesis.
